--- a/Res.html
+++ b/Res.html
@@ -86,7 +86,7 @@
       </div>
 
       <div class="banner">
-        <img src="https://images.unsplash.com/photo-1516918656725-e9b3ae9ee7a4?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGklMjByZXNvbHV0aW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80" alt="Slider 1" />
+        <img src="./assets/images/slider1.jpg" alt="Slider 1" />
 
 
         <div class="banner_ctn">
